# skingraph

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EVAL-OPS.md  IMPROVEMENTS.md  README-v2.md  README.md  ROADMAP.md  TODO.md  docker-compose.yml  entrypoint.sh  evaluate.py  fe.js  pyproject.toml  raildeploys.txt  railway.toml  run_pipeline.py  svcs.json  test_scanner.py
.github/: dependabot.yml
.github/actions/python-deps/: action.yml
.github/workflows/: canary.yml  ci.yml  deploy.yml  eval-diff.yml
data/: conflict_matrix.json  eval_results.json  function_groups.json  ground_truth.json  ground_truth.json.docx  ingredient_master.json  ingredients.json  irritant_registry.json  registry.json  registry_candidates.json  user_profile_sample.json
data/golden_set/: desktop.ini
data/ocr_out/: prod_001.txt  prod_002.txt
docs/: ARCHITECTURE.md  preprocessing_comparison.md
docs/badges/: ingredient_f1.json  recall.json
eval/: README.md  _stats.py  canary.py  coach_eval.py  diff.py  evaluate.py  history.jsonl  scorecard.py  sweep.py  vision_eval.py
eval/cassettes/: manifest.json  prod_001.flash.json  prod_002.flash.json  prod_003.flash.json  prod_004.flash.json
legacy/: README.md
notebooks/: BLAST_RADIUS.md  README.md  analysis.ipynb  benchmark_analysis.ipynb  requirements.txt  run_benchmark.py
notebooks/blast_radius/: __init__.py  config.py  debug_loop.py  models.py  oracle.py  repo_context.py  runner.py  scoring.py
notebooks/results/: debug_loop_20260622_013501.json  debug_loop_latest.json  demo_20260621_093827.json  latest.json  live_20260621_100706.json  live_20260621_100746.json  live_20260621_101417.json  live_20260621_101949.json  live_20260621_103202.json  live_20260621_110455.json  live_20260621_111050.json  live_20260621_150107.json  live_20260621_150248.json  live_20260624_194822.json
scripts/: build_index.py  manage_users.py  run_ocr.py  try_coach.py  try_scanner.py
src/: config.py  conflicts.py  followup.py  graph.py  messages.py  metrics.py  observability.py  ocr_check.py  preprocess.py  pricing.py  rejection_store.py  render.py  routine_dashboard.py  state.py  user_store.py  vectorstore.py  verify.py
src/api/: __init__.py  main.py  schemas.py  service.py
src/nodes/: auditor.py  coach.py  normalizer.py  registry.py  routine_advisor.py  scanner.py  websearch.py
src/prompts/: coach.py  followup.py  scanner.py  websearch.py
terraform/: alb.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  main.tf  outputs.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: __init__.py  conftest.py  helpers.py  test_api.py  test_auditor.py  test_coach.py  test_coach_eval.py  test_eval_bench.py  test_eval_canary.py  test_eval_diff.py  test_eval_replay.py  test_eval_scorecard.py  test_eval_stats.py  test_eval_sweep.py  test_followup.py  test_normalizer.py  test_ocr_check.py  test_preprocess.py  test_registry.py  test_rejection_store.py  test_render.py  test_routers.py  test_routine_advisor.py  test_scanner.py  test_user_store.py  test_websearch.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/app/: index.html
ui/landing/: index.html
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/api/: client.ts  types.ts
ui/src/components/: ErrorBoundary.tsx  Flag.tsx  LeafScore.tsx  NoUser.tsx  PipelineSteps.tsx  ScanResult.tsx  TagInput.tsx  Typewriter.tsx  UserPicker.tsx  icons.tsx
ui/src/context/: UserContext.tsx
ui/src/i18n/: index.tsx  strings.ts
ui/src/lib/: profile.ts
ui/src/pages/: CheckProduct.tsx  MyProfile.tsx  MyRoutine.tsx
