[project]
name = "skincare-coach"
version = "0.1.0"
description = ""
authors = [
    {name = "David Valls",email = "dvallslanaquera@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "pyahocorasick (>=2.3.1,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Offline, deterministic suite: every Gemini and vector-store call is mocked.
# testpaths is scoped to tests/ so the legacy root-level test_scanner.py manual
# script (which needs an API key + image) is never collected.
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)"
]
