[project]
name = "skincare-coach"
version = "0.1.0"
description = ""
authors = [
    {name = "David Valls",email = "dvallslanaquera@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Offline, deterministic suite: every Gemini and vector-store call is mocked.
# testpaths is scoped to tests/ so the manual scripts/ smoke tests (which need an
# API key + image) are never collected.
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)"
]
