[project]
name = "skincare-coach"
version = "1.0.0"
description = ""
authors = [
    {name = "David Valls",email = "dvallslanaquera@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "langgraph (>=1.1.10,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rapidfuzz (>=3.14.5,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "qdrant-client (>=1.18.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Offline, deterministic suite: every Gemini and vector-store call is mocked.
# testpaths is scoped to tests/ so the manual scripts/ smoke tests (which need an
# API key + image) are never collected.
testpaths = ["tests"]
pythonpath = ["."]
# Coverage floor set 5 points under the measured 84% (2026-07); ratchet up, not down.
# Note a partial run (pytest tests/test_x.py) will fail the floor — pass
# --no-cov when iterating on a single file.
addopts = "-q --cov=src --cov-fail-under=79"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# S is the bandit ruleset — no separate bandit tool needed.
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]                 # pytest asserts
"src/user_store.py" = ["S608"]        # parametrised ALTER TABLE trips the SQL check
"src/prompts/*" = ["E501"]            # prompt text is verbatim model input; don't reflow
"src/api/main.py" = ["B008"]          # FastAPI's File()/Form() defaults are the idiom

[tool.mypy]
files = ["src"]
plugins = ["pydantic.mypy"]
# Non-strict to start; ratchet up later. Third-party libs without stubs
# (langgraph, fastembed, qdrant) are followed loosely, not ignored wholesale.
ignore_missing_imports = true
